# descord

./: .gitignore  Cargo.toml  README.md
examples/quickstart/: Cargo.toml  README.md
examples/quickstart/src/: main.rs
examples/quickstart/src/commands/: echo.rs  mod.rs  ping.rs
examples/quickstart/src/events/: mod.rs  ready.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs
src/cache/: mod.rs
src/client/: client.rs  context.rs  mod.rs
src/consts/: color.rs  consts.rs  events.rs  intents.rs  misc.rs  mod.rs  opcode.rs  payloads.rs  permissions.rs  reaction.rs
src/handlers/: mod.rs
src/handlers/events/: mod.rs
src/internals/: commands.rs  components.rs  events.rs  mod.rs  slash_commands.rs
src/models/: allowed_mentions.rs  application_command.rs  attachment.rs  author.rs  channel.rs  component_builder.rs  components.rs  deleted_message_response.rs  dm_channel.rs  embed.rs  embed_builder.rs  embed_data.rs  emoji.rs  guild.rs  interaction.rs  member.rs  message_edit.rs  message_reference.rs  message_response.rs  misc.rs  mod.rs  permissions.rs  reaction_response.rs  ready_response.rs  role.rs  role_response.rs  user.rs
src/utils/: mod.rs  permissions.rs  rest_api.rs  slash_command.rs
src/utils/rest/: misc.rs  mod.rs
src/utils/rest/guild/: channel.rs  message.rs  mod.rs  role.rs  user.rs
src/ws/: mod.rs  payload.rs  websocket_manager.rs
