[package]
name = "descord"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
description = "A minimal discord api wrapper."
authors = ["thatmagicalcat <thatmagicalcat@duck.com>"]
repository = "https://github.com/thatmagicalcat/descord"
readme = "README.md"

[dependencies]
async-trait = "0.1.78"
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures-util = "0.3.30"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.21"
nanoserde = "0.1.37"
reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
