[package]
name = "descord"
version = "0.1.9"
edition = "2021"
license = "GPL-3.0-only"
description = "A minimal discord api wrapper."
authors = ["The descord contributors"]
repository = "https://github.com/thatmagicalcat/descord"
readme = "README.md"

[dependencies]
descord-macros = { version = "0.1.0", path = "macros" }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures-util = "0.3.30"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.21"
lru = "0.12.3"
nanoserde = "0.1.37"
reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["net", "sync", "time", "rt", "rt-multi-thread", "tokio-macros", "macros"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
urlencoding = "2.1.3"
regex = "1.10.3"
