[package]
name = "descord-macros"
version = "0.1.1"
edition = "2021"
description = "Macro implementation crate of descord."
authors = ["thatmagicalcat <thatmagicalcat@duck.com>"]
repository = "https://github.com/thatmagicalcat/descord"
license = "GPL-3.0-only"

[dependencies]
proc-macro2 = "1.0.79"
darling = "0.20.8"
quote = "1.0.35"
syn = "2.0.51"
walkdir = "2.5.0"

[lib]
proc-macro = true
